--- a/app.json
+++ b/app.json
@@ -52,6 +52,12 @@
       "eas": {
         "projectId": "785884e3-5535-4a7d-a2b6-e63211305fe4"
       }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/785884e3-5535-4a7d-a2b6-e63211305fe4"
     }
   }
 }
